fix(modal): prevent modal content overflow from shifting footer (#1499)

--- a/src/components/modal/_modal.scss
+++ b/src/components/modal/_modal.scss
@@ -78,6 +78,11 @@
     margin-bottom: $spacing-lg;
   }
 
+  .#{$prefix}--modal-header,
+  .#{$prefix}--modal-footer {
+    flex-shrink: 0;
+  }
+
   .#{$prefix}--modal-header__label {
     @include reset;
     @include typescale('omega');
